Before checking with Esther

--- a/songs-mass/dicsoseg-k159.tex
+++ b/songs-mass/dicsoseg-k159.tex
@@ -7,15 +7,19 @@
   \beginverse*
     \[F] \[F]Dicsőség a \[Gm]magasságban \[C7] Isten\[F]nek,
     \[F]És a Földön \[Gm]békesség a \[C7]jószándékú \[Dm]embernek! \[Dm]
+    \vspace{0.2cm}
     \[A#]Dicsőítünk \[C7]Téged, \[Gm] áldunk \[Dm]Téged,
     \[A#] Imádunk \[C7]Téged, \[Gm]magasztalunk \[Dm]Téged,
+    \vspace{0.2cm}
     \[C7]Hálát adunk \[F]Neked \[Gm] nagy dicső\[F]ségedért,
     \[F] Urunk és \[Gm]Istenünk, \[C7] mennyei Ki\[F]rály,
     \[Gm]Mindenható \[C7]Atyais\[F]ten! \[Gm] \[C7] \[F]
+    \vspace{0.2cm}
     \[A#]Urunk, Jézus \[C7]Krisztus, \[Gm]egyszülött Fi\[Dm]ú,
     \[A#] Urunk és \[C7]Istenünk, \[Gm] Isten \[Dm]Báránya,
+    \vspace{0.2cm}
     Az \[C7]Atyának Fi\[F]a, Te elveszed a \[E]világ bűne\[A]it, \[A] \[Dm] irgalmazz \[Gm]nékünk; \[Gm]
-    Te \[F]elveszed a \[E]világ bűne\[A]it, \[A] \[Dm] hallgasd meg \[Gm]könyörgésünket.
+    Te \[F]elveszed a \[E]világ bűne\[A]it, \[A] \[Dm] hallgasd meg könyörgésün\[Gm]ket.
     Te az \[F]Atya jobbján \[E]ülsz, \[E] irgalmazz \[A]nékünk!
     Mert \[D]egyedül Te vagy a Szent, Te vagy az \[A]Úr,
     Te vagy az \[F#m]egyetlen Föl\[E]ség, Jézus \[A]Krisztus,
