--- a/songs-taize/irgalmas-istenunk.tex
+++ b/songs-taize/irgalmas-istenunk.tex
@@ -4,7 +4,7 @@
 ]
 
   \beginverse*
-    \[Dm] Irgalmas \[A]Istenünk \[Dm]jósá\[C]gát \[F]mindö\[C]rökre \[Dm]é\[A]nek\[Dm]lem!
+    \[Dm] Irgalmas \[A]Istenünk \[Dm]jósá\[C]gát \[F]mindö\[C]rökké \[Dm]é\[A]nek\[Dm]lem!
   \endverse
 
 \endsong
