--- a/songs/alleluja.tex
+++ b/songs/alleluja.tex
@@ -20,7 +20,7 @@
   \beginverse\memorize
     \[D]Krisztus az \[F#m]Úr, erő s \[G]hatalom Ö\[D]vé,
     \[G]Bátran bízz \[D]Benne, hisz’ \[A]mond\[A7]ta:
-    ``Ki \[D]újra ko\[F#m]pog, annak \[G]ajtót nyitnak \[D]majd''.
+    ``Ki \[D]újra ko\[F#m]pog, annak \[G]ajtót nyitnak \[D]majd.''
     \[G]Allelu\[D]ja, alle\[A]l\[A7]u\[D]ja!
   \endverse
 
