--- a/songs/en-uram-en-istenem.tex
+++ b/songs/en-uram-en-istenem.tex
@@ -1,6 +1,7 @@
 \beginsong{Én Uram, én Istenem}
 [
-  by={Flüe-i Szent Miklós, Ferenczy Rudolf (Dax)}
+  by={Flüe-i Szent Miklós, Ferenczy Rudolf (Dax)},
+  li={Kék könyv / 214.}
 ]
 
   \ifchorded
@@ -24,18 +25,18 @@
   \beginverse
     \[Em]Én Uram, én \[H7]Istenem,
     \[G]Fogadd el az \[D]életem,
-    \[C]Hadd legyen e\[D]gészen a Ti{\[G H7]{\_{é}}}d!
+    \[C]Hadd legyen e\[D]gészen a Ti\[Em]éd!
   \endverse
 
   \beginverse
     \[Em]Én Uram, én \[H7]Istenem,
     \[G]Fogadd el az \[D]életem,
-    \[C]Hadd legyen e\[D]gészen a Ti\[Em]éd! \[H7]
+    \[C]Hadd legyen e\[D]gészen a Ti{\[G H]{\_{é}}}d! \[Em] \[H7]
   \endverse
 
   \ifchorded
     \beginverse*
-      {\nolyrics \[G] \[D] \[Am] \[Am7] \[Em]}
+      {\nolyrics \[G] \[D] \[Am] \[Em]}
     \endverse
   \fi
 
