--- a/songs/mennek-az-asszonyok.tex
+++ b/songs/mennek-az-asszonyok.tex
@@ -34,7 +34,7 @@
   \endverse
 
   \beginverse
-    ^Mennek az asszony^ok, ^mi is megyünk ^utánunk,
+    ^Mennek az asszony^ok, ^mi is megyünk ^utánuk,
     ^Szívünkben ^nagy ö^röm, ^ujjong^jon a ^Föld,
     ^Jézus, ^Ő az ^Úr!
   \endverse
