--- a/songs/oly-jo-aldani.tex
+++ b/songs/oly-jo-aldani.tex
@@ -12,10 +12,10 @@
   \endverse
 
   \beginverse*
-    \[G]Adjatok \[G7]hálát az \[C]Istennek!
+    /: \[G]Adjatok \[G7]hálát az \[C]Istennek!
     \[G7]Adjatok hálát az \[C]Istennek!
     \[C7]Ő a mi teremtő \[F]Kirá\[G]lyunk,
-    \[D]Alle-allelu\[G]ja, \[F]allelu\[C]ja, \[F]allelu\[C]ja! \[H7]
+    \[D]Alle-allelu\[G]ja, \[F]allelu\[C]ja, \[F]allelu\[C]ja! :/ \rep{2} \[H7]
   \endverse
 
   \beginverse*
