--- a/songs/ott-lelegzel-a-fakban.tex
+++ b/songs/ott-lelegzel-a-fakban.tex
@@ -12,7 +12,7 @@
   \endverse
 
   \beginverse
-    ^Szép sorsomat Te ^sz{\_{ő}}^tted, ^jó leborulni e^l{\_{ő}}tted,
+    ^Szép sorsomat Te ^sz{\_{ő}}^tted, ^jó leborulni E^l{\_{ő}}tted,
     ^Te vagy az útnak a ^v{\_{é}}ge, sz\_{e}nt mélység, \_{á}ldott ^b{\_{é}}^ke!
   \endverse
 
