--- a/songs/tancolj-az-urnak.tex
+++ b/songs/tancolj-az-urnak.tex
@@ -5,7 +5,7 @@
 ]
 
   \ifchorded
-    \versesep=12pt plus 3pt minus 9pt
+    \versesep=12pt plus 3pt minus 10pt
   \fi
 
   \ifchorded
@@ -23,7 +23,7 @@
     Mint \[Em]Dávid az \[D]Úr lá\[Em]dája e\[Hm]lőtt,
     \[G]Táncol\[D]junk \[Em]Is\[Hm]ten\[Em]nek!
     Az \[Em]Ő or\[D]szága már \[Em]köztünk \[Hm]van,
-    \[G]Daloljon \[D]lelkünk \[Em]uj\[Hm]jong\[Em]va!
+    \[G]Daloljon \[D]ajkunk \[Em]uj\[Hm]jong\[Em]va!
   \endverse
 
   \beginverse*
