--- a/songs/lelkem-az-urat-dicserd.tex
+++ b/songs/lelkem-az-urat-dicserd.tex
@@ -48,8 +48,8 @@
   \endverse
 
   \beginverse
-    ^Közel vagy ^mindenki^hez, ki ^tiszta ^szívből ^Hozzád ki^ált,
-    ^Kérését ^teljesí^ted, ^megőrzöd ^azt, ki ^Téged i^mád.
+    ^Közel vagy ^mindenki^hez, ^ ki tiszta ^szívből ^Hozzád ki^ált,
+    ^Kérését ^teljesí^ted, ^ megőrzöd ^azt, ki ^Téged i^mád.
   \endverse
 
   \beginverse*
@@ -58,7 +58,7 @@
 
   \beginverse
     ^Minden nap ^dicsérem ^Őt, ^áldom az ^Urat, míg ^élek ^én.
-    ^Új dallal ^színe e^lőtt, ^ujjongva ^hirdetem ^szent nev^ét!
+    ^Új dallal ^színe e^lőtt, ^ujjongva ^hirdetem ^ szent nev^ét!
   \endverse
 
   \beginverse*
