--- a/compilations/2018-junialis-lyric.tex
+++ b/compilations/2018-junialis-lyric.tex
@@ -1,4 +1,4 @@
-\documentclass[a5paper,twoside]{article}
+\documentclass[a4paper,landscape]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{lmodern}
 \usepackage[T1]{fontenc}
@@ -9,11 +9,11 @@
 
 \usepackage[bookmarks]{hyperref}
 
-\usepackage[chorded]{songs}
-% \usepackage[lyric]{songs}
+% \usepackage[chorded]{songs}
+\usepackage[lyric]{songs}
 % \usepackage[slides]{songs}
 
-\title{Gitáros Mise\\\textit{(2017. november 26.)}}
+\title{Juniális\\\textit{(2018. június 10.)}}
 % \author{Donkó István}
 \date{}
 
@@ -23,10 +23,8 @@
 \setlength{\headsep}{0cm}
 \setlength{\footskip}{0.85cm}
 
-\setlength{\oddsidemargin}{-1.3cm}
-\setlength{\evensidemargin}{-1.8cm}
-
-\setlength{\textwidth}{12.9cm}
+\setlength{\oddsidemargin}{-2cm}
+\setlength{\textwidth}{28.5cm}
 \setlength{\textheight}{18.5cm}
 
 \setlength{\songnumwidth}{1.02cm}
@@ -35,19 +33,19 @@
 
 \catcode`_=12 % use underscore as regular character
 \renewcommand{\_}[1]{\underline{#1}} % shorter command for adding melismas
-\songcolumns{1}
+\songcolumns{3}
 \notenames{A}{H}{C}{D}{E}{F}{G}
 
 \begin{document}
-  \pagenumbering{arabic}
+  % \pagenumbering{arabic}
 
-  \begin{titlepage}
+  % \begin{titlepage}
     \pagenumbering{gobble}
-    \setlength{\oddsidemargin}{-1.625cm}
+  %   \setlength{\oddsidemargin}{-1.625cm}
 
-    \vspace*{4cm}
-    {\let\newpage\relax\maketitle}
-  \end{titlepage}
+  %   \vspace*{4cm}
+  %   {\let\newpage\relax\maketitle}
+  % \end{titlepage}
 
   \versesep=12pt plus 3pt minus 5pt
 
@@ -55,13 +53,15 @@
     \baselineadj=2pt plus 1pt minus 1pt
   \fi
 
-  % \includeonlysongs{46,M10,M20,84,20,56,M30,M40,87,48,97,73,40,92}
-  \includeonlysongs{68}
+  \includeonlysongs{K146,M10,M20,84,55,26,M30,M40,48,97,85,40,73}
 
   \begin{songs}{}
-    \transpose{2}
-
     \input{songs.tex}
+
+    \renewcommand{\thesongnum}{K\arabic{songnum}}
+    \setcounter{songnum}{146}
+    \setlength{\songnumwidth}{1.45cm}
+    \input{songs/menjetek-be-kapuin.tex}
 
     \renewcommand{\thesongnum}{T\arabic{songnum}}
     \setlength{\songnumwidth}{1.1cm}
@@ -75,12 +75,12 @@
     \input{songs-mass.tex}
   \end{songs}
 
-  \newpage
-  \thispagestyle{empty}
+  % \newpage
+  % \thispagestyle{empty}
 
-  % To be continued...
-  \vspace*{\fill}
-  % \vfill
-  Budaörs, 2017. november 26.
+  % % To be continued...
+  % \vspace*{\fill}
+  % % \vfill
+  % Budaörs, 2018. június 10.
 
 \end{document}
