After checking with Esther

--- a/songs/apokrif-ima.tex
+++ b/songs/apokrif-ima.tex
@@ -31,4 +31,10 @@
     ^ Ki látod ^mit teszek, ^ hallgass el ^engem.
   \endverse
 
+  \ifchorded
+    \beginverse*
+      {\nolyrics Utójáték: \[D#dim] \[Em] \[A6] \[A7] \[D]}
+    \endverse
+  \fi
+
 \endsong
