--- a/songs/foltamadt-alleluja.tex
+++ b/songs/foltamadt-alleluja.tex
@@ -1,7 +1,8 @@
 \beginsong{Föltámadt! Alleluja!}
 [
   by={Sillye Jenő},
-  index={Álltok szótlanul}
+  index={Álltok szótlanul},
+  li={Kék könyv / 66.}
 ]
 
   % \ifchorded
