--- a/songs/jezus-a-mi-oltalmunk.tex
+++ b/songs/jezus-a-mi-oltalmunk.tex
@@ -6,7 +6,7 @@
 
   \ifchorded
     \beginverse*
-       {\nolyrics Előjáték: \[F] \[C] \[Dm] \[A]\[A#-C] \[F] \[A] \[Dm]}
+       {\nolyrics Előjáték: /: \[F] \[C] \[Dm] \[A]\[A#-C] \[F] \[A] \[Dm] :/}
     \endverse
   \fi
 
