--- a/songs/koszonom-jezus.tex
+++ b/songs/koszonom-jezus.tex
@@ -1,4 +1,7 @@
-\beginsong{Köszönöm, Jézus}[]
+\beginsong{Köszönöm, Jézus}
+[
+  li={Kék könyv / 127.}
+]
 
   \beginverse\memorize
     \[D] Köszönöm, J\_{é}zus, köszönöm, J\_{é}zus,
