--- a/songs/oly-jo-aldani.tex
+++ b/songs/oly-jo-aldani.tex
@@ -34,7 +34,7 @@
   \endverse
 
   \beginverse
-    ^Már kora reg^ge^len jó^sá^gát, ^ ^ ^ ^
+    ^Már ^kora ^reggelen ^ ^jóságát, ^ ^ ^ ^
     És ^éjszaká^kon ^át hir^de^tem szün^te^len nagy irgal^mát. ^ ^ ^ ^
   \endverse
 
