--- a/songs/rajta-dicserjetek-az-ur-nevet.tex
+++ b/songs/rajta-dicserjetek-az-ur-nevet.tex
@@ -17,7 +17,7 @@
     Igen, tu\[Em]dom, Istenünk hatal\[C]mas,
     Végbevisz \[Am]mindent, amit csak a\[D]k\[H7]ar.
     A hegyek\[Em]től a tenger mélyé\[C]ig,
-    A föld\[Am]től az égbolt magasságá\[D]ig. \[D4] \[D]
+    A földtől az \[Am]égbolt magasságá\[D]ig. \[D4] \[D]
   \endverse
 
   \beginverse*
