--- a/songs/sotet-fenn-az-eg.tex
+++ b/songs/sotet-fenn-az-eg.tex
@@ -25,12 +25,12 @@
     Élő \[A]irgalmadat \[H]terjeszd ki fö\[E]l\[H7]énk!
     Jöjj el \[A]hát, Iste\[E]nem,
     Nyíljon \[H]már ki a végte\[C#m]len!
-    Jöjj el, \[A]gyermekarcú \[E]Isten, \[H7]szállj kö\[E]zénk!
+    Jöjj el, \[A]gyermekarcú \[E]Isten, \[H7]szállj kö\[E]zénk! \[E]
   \endchorus
 
   \ifchorded
     \beginverse*
-       {\nolyrics Közjáték: /: \[Em] \[Hm] \[G] \[D] \[C] \[G] \[H] \[H7] :/ \rep {2} \[Em] }
+       {\nolyrics Közjáték: /: \[Em] \[Hm] \[G] \[D] \[C] \[G] \[H] \[H7] :/ \rep {2} \[Em] \[Em] }
     \endverse
   \fi
 
