--- a/songs/minden-mi-el.tex
+++ b/songs/minden-mi-el.tex
@@ -1,4 +1,7 @@
-\beginsong{Minden, mi él}[]
+\beginsong{Minden, mi él}
+[
+  li={Kék könyv / 153.}
+]
 
   \ifchorded
     \versesep=12pt plus 3pt minus 7pt
