Moved song lettering and numbering to list files

--- a/songs-extra.tex
+++ b/songs-extra.tex
@@ -1,3 +1,5 @@
+\renewcommand{\thesongnum}{K\arabic{songnum}}
+
 \input{songs-extra/hala-neked-istenunk.tex}
 \input{songs-extra/koszonjuk-neked-urunk.tex}
 \input{songs-extra/jo-atyank-koszonjuk-neked.tex}
