--- a/songs-mass.tex
+++ b/songs-mass.tex
@@ -1,3 +1,6 @@
+\renewcommand{\thesongnum}{M\arabic{songnum}}
+\setlength{\songnumwidth}{1.25cm}
+
 \setcounter{songnum}{10}
 \input{songs-mass/uram-irgalmazz-k159.tex}
 
