--- a/songs-taize.tex
+++ b/songs-taize.tex
@@ -1,3 +1,6 @@
+\renewcommand{\thesongnum}{T\arabic{songnum}}
+\setlength{\songnumwidth}{1.1cm}
+
 \input{songs-taize/ahol-szeretet.tex}
 \input{songs-taize/aldott-legy-uram.tex}
 \input{songs-taize/bizakodjatok-jo-az-ur.tex}
