Applied lots of fixes and some uniformizations

--- a/songs-mass/uram-irgalmazz-k159.tex
+++ b/songs-mass/uram-irgalmazz-k159.tex
@@ -6,7 +6,8 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték:
+      {\nolyrics
+        Előjáték:
         /: \[Dm] \[Gm] \[C7] \[F] :/ \rep{2}
         \[Dm] \[Gm] \[A7] \[Dm]
       }
