--- a/songs.tex
+++ b/songs.tex
@@ -9,7 +9,7 @@
 \input{songs/antioch-dal.tex}
 \input{songs/apokrif-ima.tex}
 \input{songs/aroni-aldas.tex}
-\input{songs/atya-teremto.tex}
+\input{songs/atya-teremto-szeretet-lelke.tex}
 \input{songs/atyam-ket-kezedben.tex}
 \input{songs/atyam-tied-vagyok.tex}
 \input{songs/ave-maria.tex}
