--- a/songs/almaimbol-lelkembol.tex
+++ b/songs/almaimbol-lelkembol.tex
@@ -6,9 +6,11 @@
 
   \ifchorded
     \beginverse*
-       {\nolyrics Előjáték:
-       \[Hm] \[F#m] \[G] \[F#m] \[G] \[G] \[A] \[A]
-       \[Hm] \[F#m] \[G] \[F#m] \[G] \[A] \[A] \[G] \[G] \[D] \[A]}
+      {\nolyrics
+        Előjáték:
+        \[Hm] \[F#m] \[G] \[F#m] \[G] \[G] \[A] \[A]
+        \[Hm] \[F#m] \[G] \[F#m] \[G] \[A] \[A] \[G] \[G] \[D] \[A]
+      }
     \endverse
   \fi
 
