--- a/songs/atyam-ket-kezedben.tex
+++ b/songs/atyam-ket-kezedben.tex
@@ -1,6 +1,6 @@
 \beginsong{Atyám, két kezedben}[]
 
-  \beginverse\memorize
+  \beginverse
     \[Dm]Atyám, két ke\[C]zedben, \[A7]csak ott lakha\[Dm]tom,
     \[F]Biztonságot \[C]csak Tőled ka\[Dm]pok. \[G]
     \[Dm]Újjá így te\[C]remtesz, \[A7]sebem ápo\[Dm]lod,
