--- a/songs/jezus-nez-ram.tex
+++ b/songs/jezus-nez-ram.tex
@@ -5,8 +5,8 @@
 
   \ifchorded
     \beginverse*
-      {
-        \nolyrics Előjáték:
+      {\nolyrics
+        Előjáték:
         \[C] \[Dm] \[Am] \[E7] \[Dm] \[G7] \[C] \[G7]
         \[C] \[Dm] \[Am] \[E7] \[Dm] \[G7] \[C]
       }
