--- a/songs/ket-kezemben.tex
+++ b/songs/ket-kezemben.tex
@@ -6,7 +6,8 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték:
+      {\nolyrics
+        Előjáték:
         \[D] \[G] \[A] \[D]
         \[G] \[A] \[D]
       }
