--- a/songs/loyolai-szent-ignac-imaja.tex
+++ b/songs/loyolai-szent-ignac-imaja.tex
@@ -12,7 +12,7 @@
 
   \beginverse\memorize
     \[C]Fogadd el, \[G]Uram, \[Am]szabadságo\[F]mat, \[C]fogadd el \[G]eg{\_{é}}\[C]szen! \[G]
-    \[C] Vedd értel\[G]memet, \[Am]akarato\[F]mat, és \[C]emlé\[G]kez{\_{é}}\[C]sem!
+    \[C] Vedd \[G]értelmemet, \[Am]akarato\[F]mat, és \[C]emlé\[G]kez{\_{é}}\[C]sem!
   \endverse
 
   \beginverse
