--- a/songs/mennek-az-asszonyok.tex
+++ b/songs/mennek-az-asszonyok.tex
@@ -29,7 +29,7 @@
   \endchorus
 
   \beginverse
-    ^Jézus megmond^ta, ^harmadnapra ^feltámadt,
+    ^Jézus megmond^ta, ^harmadnapra ^feltámad,
     ^Üres ^már a ^sír, ^terjed^jen a ^hír,
     ^Él a mi ^Megvál^tónk!
   \endverse
