--- a/songs/szentlelek-jojj.tex
+++ b/songs/szentlelek-jojj.tex
@@ -50,7 +50,7 @@
   \endverse
 
   \beginverse*
-    Refrén \rep{2}
+    Refrén \rep{2} \echo{\[D]Jöjj, \[Hm]áradj \[Em]szét!}
   \endverse
 
 \endsong
