--- a/songs/taplalo-szent-kenyer.tex
+++ b/songs/taplalo-szent-kenyer.tex
@@ -7,7 +7,7 @@
     /: Tápláló \[D]szent kenyér, tápláló \[Hm]drága vér,
     Betölti \[Em]szívemet a végte\[A4]len. \[A]
     Békémnek \[D]záloga, lelkemnek \[Hm]otthona,
-    Formáld át \[Em]életem, légy ve\[A4]lem! \[A] :/ \[D]
+    Formáld át \[Em]életem, légy ve\[A4]lem! \[A] :/ \echo{Légy ve\[D]lem!}
   \endverse
 
 \endsong
