--- a/songs/sotet-fenn-az-eg.tex
+++ b/songs/sotet-fenn-az-eg.tex
@@ -6,9 +6,11 @@
   li={Kék könyv / 14.}
 ]
 
+  \transpose{-5}
+
   \ifchorded
     \beginverse*
-       {\nolyrics Előjáték: \[Em] \[Em] /: \[Em] \[Hm] \[G] \[D] \[C] \[G] \[H] \[H7] :/ \rep {2} \[Em] \[Em]}
+       {\nolyrics Előjáték: \[Em] \[Em] /: \[Em] \[Hm] \[G] \[D] \[C] \[G] \[H] \[H7] :/ \rep{2} \[Em] \[Em]}
     \endverse
   \fi
 
@@ -30,7 +32,7 @@
 
   \ifchorded
     \beginverse*
-       {\nolyrics Közjáték: /: \[Em] \[Hm] \[G] \[D] \[C] \[G] \[H] \[H7] :/ \rep {2} \[Em] \[Em] }
+       {\nolyrics Közjáték: /: \[Em] \[Hm] \[G] \[D] \[C] \[G] \[H] \[H7] :/ \rep{2} \[Em] \[Em] }
     \endverse
   \fi
 
