--- a/songs/baranyom-baranyom.tex
+++ b/songs/baranyom-baranyom.tex
@@ -2,8 +2,8 @@
 
   \ifchorded
     \beginverse*
-      {
-        \nolyrics Előjáték: \[G] \[Am] \[Em] \[C] \[G-Em] \[Am-D] \[G] \[D]
+      {\nolyrics
+        Előjáték: \[G] \[Am] \[Em] \[C] \[G-Em] \[Am-D] \[G] \[D]
         \hspace{1.42cm} \[G] \[Am] \[Em] \[C] \[G-Em] \[Am-D] \[G]
       }
     \endverse
@@ -37,8 +37,8 @@
 
   \ifchorded
     \beginverse*
-      {
-        \nolyrics Utójáték: \[G] \[Am] \[Em] \[C] \[G-Em] \[Am-D] \[G] \[D]
+      {\nolyrics
+        Utójáték: \[G] \[Am] \[Em] \[C] \[G-Em] \[Am-D] \[G] \[D]
         \hspace{1.49cm} \[G] \[Am] \[Em] \[C] \[G-Em] \[Am-D] \[G]
       }
     \endverse
