--- a/songs2.tex
+++ b/songs2.tex
@@ -1,4 +1,6 @@
 \setcounter{songnum}{101}
 
+\input{songs/alleluja-k243.tex}
 \input{songs/baranyom-baranyom.tex}
 \input{songs/menjetek-be-kapuin.tex}
+\input{songs/szentlelek.tex}
