--- a/compilations/2019-junialis-chord.tex
+++ b/compilations/2019-junialis-chord.tex
@@ -9,13 +9,11 @@
 
 \usepackage[bookmarks]{hyperref}
 
-% \usepackage[chorded]{songs}
-\usepackage[lyric]{songs}
+\usepackage[chorded]{songs}
+% \usepackage[lyric]{songs}
 % \usepackage[slides]{songs}
 
-% \title{Temp}
-\title{Gitáros Mise\\\textit{(2018. november 17.)}}
-
+\title{Juniális\\\textit{(2019. június 16.)}}
 % \author{Donkó István}
 \date{}
 
@@ -25,8 +23,8 @@
 \setlength{\headsep}{0cm}
 \setlength{\footskip}{0.85cm}
 
-\setlength{\oddsidemargin}{-1.3cm}
-\setlength{\evensidemargin}{-1.8cm}
+\setlength{\oddsidemargin}{-1cm}
+\setlength{\evensidemargin}{-2.1cm}
 
 \setlength{\textwidth}{12.9cm}
 \setlength{\textheight}{18.5cm}
@@ -57,11 +55,7 @@
     \baselineadj=2pt plus 1pt minus 1pt
   \fi
 
-  % \includeonlysongs{M11,101,56,M11,101,56}
-  % \includeonlysongs{80,M10,55,26,M30,M40,85,40,15}
-  % \includeonlysongs{46,M10,M20,84,20,56,M30,M40,87,48,97,73,40,92}
-  % \includeonlysongs{68}
-  \includeonlysongs{104,104,104,104}
+  \includeonlysongs{80,M11,M20,84,101,14,M30,M40,48,85,73,87,12,97,11}
 
   \begin{songs}{}
     \input{songs.tex}
@@ -73,12 +67,13 @@
 
     \input{songs-mass.tex}
   \end{songs}
+
   \newpage
   \thispagestyle{empty}
 
   % To be continued...
   \vspace*{\fill}
   % \vfill
+  Budaörs, 2019. június 16.
 
-  Budaörs, 2018. november 4.
 \end{document}
