Added songs from Kazetta

--- a/songs/jezus-te-vagy-az-ur-orokke.tex
+++ b/songs/jezus-te-vagy-az-ur-orokke.tex
@@ -1,4 +1,4 @@
-\beginsong{Jézus Te vagy az Úr örökké}[]
+\beginsong{Jézus, Te vagy az Úr örökké}[]
 
   \beginverse
     \[Dm]Jézus, Te vagy az \[G]Úr örökké,
