--- a/songs2.tex
+++ b/songs2.tex
@@ -1,6 +1,17 @@
 \setcounter{songnum}{101}
 
-\input{songs/alleluja-k243.tex}
+\input{songs/aldom-szent-neved.tex}
+\input{songs/atya-aldott-legyel.tex}
+\input{songs/atyaisten-a-neped.tex}
 \input{songs/baranyom-baranyom.tex}
+\input{songs/finn-zarandokenek.tex}
+\input{songs/halovetok.tex}
+\input{songs/itt-a-szivem.tex}
+\input{songs/jezus-te-vagy-az-ur-orokke.tex}
 \input{songs/menjetek-be-kapuin.tex}
+\input{songs/nagy-vagy-urunk.tex}
+\input{songs/ropke-fohasz.tex}
 \input{songs/szentlelek.tex}
+\input{songs/szivem-telve-van-veled.tex}
+\input{songs/utazos-dal.tex}
+\input{songs/zengd-velunk.tex}
