Added more songs (Kazetta, Jubileum, Weekend)

--- a/songs-taize.tex
+++ b/songs-taize.tex
@@ -1,5 +1,5 @@
 \renewcommand{\thesongnum}{T\arabic{songnum}}
-\setlength{\songnumwidth}{1.1cm}
+\setlength{\songnumwidth}{1.15cm}
 
 \input{songs-taize/ahol-szeretet.tex}
 \input{songs-taize/aldott-legy-uram.tex}
@@ -13,3 +13,8 @@
 \input{songs-taize/ne-felj-ne-aggodj.tex}
 \input{songs-taize/urra-var-a-szivunk.tex}
 \input{songs-taize/varj-es-ne-felj.tex}
+
+\setlength{\songnumwidth}{1.45cm}
+\setcounter{songnum}{101}
+
+\input{songs-taize/alleluja.tex}
