--- a/songs/atyaisten-a-neped.tex
+++ b/songs/atyaisten-a-neped.tex
@@ -3,6 +3,7 @@
   by={zene és szöveg: A. Broeders, alaptálta: Fábry K.}
 ]
 
+  % TODO memorize remove
   \beginverse\memorize
     Atya\[G]isten a \[Hm]néped jön \[C]Hozz\[Em7/H]ád,
     És \[Am]el\[G/H]hozza \[C2]ál\[C]doza\[D4]t\[D]át,
