--- a/songs/utazos-dal.tex
+++ b/songs/utazos-dal.tex
@@ -14,13 +14,13 @@
   \endverse
 
   \beginverse
-    Magas ^erdő, szines ^égbolt hajol ^ösvényem^re,
-    Ez a ^szépség új ^háladalt ^ír szi^vem^be.
+    Magas ^erdő, színes ^égbolt hajol ^ösvényem^re,
+    Ez a ^szépség új ^háladalt ^ír szí^vem^be.
   \endverse
 
   \beginchorus
     Ez az \[C/E]út, mit nekem \[F]adtál gyönyö\[Am]rű s néha \[G]fáj,
-    De e\[C]lőttem a ke\[F]reszted és \[Am]csilla\[G]god \[C]már.
+    De e\[C]lőttem a ke\[F]reszted és a \[Am]csilla\[G]god \[C]már.
   \endchorus
 
   \beginverse
@@ -30,7 +30,7 @@
 
   \beginverse
     Szaka^dékból helyes ^útra aki ^elvezet^tél,
-    A ve^zérem, uti^társam, uti^célom ^let^tél.
+    A ve^zérem, úti^társam, úti^célom ^let^tél.
   \endverse
 
   \beginverse*
@@ -38,8 +38,8 @@
   \endverse
 
   \beginverse*
-    /: Veled \[Am]lendüljön a \[F]léptünk, neked \[C]zendüljön a \[G]szívünk,
-    Veled \[Am]lendüljön a \[F]léptünk, ó \[C]hű vezé\[G]rünk! :/ \rep{2}
+    /: Veled \[Am]lendüljön a \[F]léptünk, Neked \[C]zendüljön a \[G]szívünk,
+    Veled \[Am]lendüljön a \[F]léptünk, ó \[C]hű Vezé\[G]rünk! :/ \rep{2}
   \endverse
 
   \beginverse*
