Fixed some minor mistakes

--- a/songs-mass/isten-baranya-k299.tex
+++ b/songs-mass/isten-baranya-k299.tex
@@ -6,7 +6,7 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[Em] \[Am] \[Ebdim] \[Em]}
+      {\nolyrics Előjáték: \[Em] \[Am] \[E&dim] \[Em]}
     \endverse
   \fi
 
