--- a/songs/teremts-bennem.tex
+++ b/songs/teremts-bennem.tex
@@ -17,7 +17,7 @@
 
   \beginverse*
     /: \[Am]Ne vess el en\[D]gem a Te or\[G]cád e\[Em]lől!
-    \[Am]Szentlelked \[D]ne vondd meg tő\[G]lem! \[G7]
+    \[Am]Szentlelked \[D]ne vond meg tő\[G]lem! \[G7]
     \[Am]Támogass az \[D]engedelmes\[G]ség lelké\[Em]vel!
     \[Am7]Szabadításod \[D7]örömét add ne\[G]kem! \[G7] :/ \rep{2}
   \endverse
