--- a/songs/vak-ember.tex
+++ b/songs/vak-ember.tex
@@ -53,7 +53,7 @@
     De \[Am]Jézus is \[G]ott ül ve\[F]lünk és ki\[E]ált,
     De \[Am]Jézus is \[G]ott ül ve\[F]lünk és ki\[E]ált:
     Oh, oh, \[E7]oh!
-    Én vagyok az {\[Am G F]{\_{ú}}}t, \[E]az igazs{\[Am G F]{\_{á}}}g, és az él{\[Am G F]{\_{e}}}t,
+    Én vagyok az {\[Am G F]{\_{ú}}}t, \[E]az igazs{\[Am G F]{\_{á}}}g, \[E]és az él{\[Am G F]{\_{e}}}t,
     Ami haza\[E]visz! Oh-\[E7]oh-oh, \[E]oh-oh, \[E7]oh-oh!
   \endverse
 
@@ -63,7 +63,7 @@
 
   \beginverse*
     Oh, oh, \[E7]oh!
-    Én vagyok az {\[Am G F]{\_{ú}}}t, \[E]az igazs{\[Am G F]{\_{á}}}g, és az él{\[Am G F]{\_{e}}}t,
+    Én vagyok az {\[Am G F]{\_{ú}}}t, \[E]az igazs{\[Am G F]{\_{á}}}g, \[E]és az él{\[Am G F]{\_{e}}}t,
     Ami haza\[E]visz! Oh-\[E7]oh-oh, \[E]oh-oh, \[E7]oh-oh!
   \endverse
 
