Change the temporary compilation

--- a/compilations/temp.tex
+++ b/compilations/temp.tex
@@ -13,9 +13,7 @@
 \usepackage[lyric]{songs}
 % \usepackage[slides]{songs}
 
-% \title{Temp}
-\title{Gitáros Mise\\\textit{(2018. november 17.)}}
-
+\title{Szentségimádás\\\textit{(2020. január 31.)}}
 % \author{Donkó István}
 \date{}
 
@@ -60,12 +58,36 @@
   % \includeonlysongs{M11,101,56,M11,101,56}
   % \includeonlysongs{80,M10,55,26,M30,M40,85,40,15}
   % \includeonlysongs{46,M10,M20,84,20,56,M30,M40,87,48,97,73,40,92}
-  % \includeonlysongs{68}
-  \includeonlysongs{104,104,104,104}
+  % \includeonlysongs{101}
+  % \includeonlysongs{999}
+  % \includeonlysongs{999,M41}
+  \includeonlysongs{54,90,36,80,91,77,97,40,84,11,6}
 
   \begin{songs}{}
     \input{songs.tex}
     \input{songs2.tex}
+
+    \setcounter{songnum}{999}
+    \beginsong{Alleluja}
+    [
+      by={Gocam ??? Varga Attila},
+      li={Kék könyv / 230. [-2]}
+    ]
+
+      \beginchorus
+        /: \[Hm]Alleluja, \[A]alleluja, \[G]allelu\[F#]ja! :/ \rep{2}
+      \endchorus
+
+      \beginverse
+        \[D]Ó, Urunk, mutassad \[A]meg nekünk, \[Hm]irgalmas szíve\[F#]det,
+        \[D]És az üdvösséget \[A]add nekünk, \[Hm]add meg \[G]nékünk, Iste\[F#]nünk!
+      \endverse
+
+      \beginchorus
+        /: \[Hm]Alleluja, \[A]alleluja, \[G]allelu\[F#]ja! :/ \rep{2}
+      \endchorus
+
+    \endsong
 
     \input{songs-taize.tex}
 
