--- a/compilations/temp.tex
+++ b/compilations/temp.tex
@@ -13,7 +13,7 @@
 \usepackage[lyric]{songs}
 % \usepackage[slides]{songs}
 
-\title{Gitáros mise\\\textit{(2020. október 04.)}}
+\title{Gitáros mise\\\textit{(2020. november 01.)}}
 % \author{Donkó István}
 \date{}
 
@@ -58,7 +58,7 @@
   % \includeonlysongs{M11,101,56,M11,101,56}
   % \includeonlysongs{80,M10,55,26,M30,M40,85,40,15}
   % \includeonlysongs{46,M10,M20,84,20,56,M30,M40,87,48,97,73,40,92}
-  \includeonlysongs{61,61,M10,M20,T9,T101,26,M30,M41,68,87,12}
+  \includeonlysongs{6,M10,T11,M20,T101,15,M30,M41,89,85,40}
   % \includeonlysongs{T101}
   % \includeonlysongs{999}
   % \includeonlysongs{999,M41}
@@ -90,10 +90,15 @@
 
     % \endsong
 
+    % \renewcommand{\thesongnum}{T\arabic{songnum}}
+    % \setlength{\songnumwidth}{1.1cm}
     \input{songs-taize.tex}
 
+    % \renewcommand{\thesongnum}{K\arabic{songnum}}
     \input{songs-extra.tex}
 
+    % \renewcommand{\thesongnum}{M\arabic{songnum}}
+    % \setlength{\songnumwidth}{1.25cm}
     \input{songs-mass.tex}
   \end{songs}
   \newpage
@@ -103,5 +108,5 @@
   \vspace*{\fill}
   % \vfill
   
-  Budaörs, 2020. október 04.
+  Budaörs, 2020. november 01.
 \end{document}
