Make szentlelek-jojj fit on one page

--- a/songs/szentlelek-jojj.tex
+++ b/songs/szentlelek-jojj.tex
@@ -14,17 +14,13 @@
   \fi
 
   \beginchorus\memorize
-    \[Em]Szentlélek, jöjj, lobogó \[D]láng!
-    Szentlélek, jöjj, \[Hm]a világ \[Em]vár!
-    Szentlélek, jöjj, viharos \[D]szél!
-    Jöjj, \[Hm]áradj \[Em]szét!
+    \[Em]Szentlélek, jöjj, lobogó \[D]láng! Szentlélek, jöjj, \[Hm]a világ \[Em]vár!
+    Szentlélek, jöjj, viharos \[D]szél! Jöjj, \[Hm]áradj \[Em]szét!
   \endchorus
 
   \beginverse
-    ^Jöjj el, élő vízfor^rás,
-    Jöjj, a szívünk ^Téged ^vár!
-    Jöjj, ki fényt adsz lelkünk^nek,
-    Jöjj, úgy ^várunk ^Rád!
+    ^Jöjj el, élő vízfor^rás, jöjj, a szívünk ^Téged ^vár!
+    Jöjj, ki fényt adsz lelkünk^nek, jöjj, úgy ^várunk ^Rád!
   \endverse
 
   \beginverse*
@@ -32,10 +28,8 @@
   \endverse
 
   \beginverse
-    ^Jöjj, igazság forrá^sa,
-    Jöjj, imádunk ^mindnyá^jan!
-    Jöjj, reményünk éleszd ^fel,
-    Jöjj ke^gyelmed^del!
+    ^Jöjj, igazság forrá^sa, jöjj, imádunk ^mindnyá^jan!
+    Jöjj, reményünk éleszd ^fel, jöjj ke^gyelmed^del!
   \endverse
 
   \beginverse*
@@ -43,10 +37,8 @@
   \endverse
 
   \beginverse
-    ^Jöjj, a néped gyűjtsd egy^be!
-    Jöjj, az alvót ^ébreszd ^fel!
-    Jöjj, a bűntől tisztíts ^meg,
-    Báto^ríts min^ket!
+    ^Jöjj, a néped gyűjtsd egy^be! Jöjj, az alvót ^ébreszd ^fel!
+    Jöjj, a bűntől tisztíts ^meg, báto^ríts min^ket!
   \endverse
 
   \beginverse*
