Fix the numbering of extra and taize songs

--- a/songs-extra.tex
+++ b/songs-extra.tex
@@ -1,4 +1,6 @@
 \renewcommand{\thesongnum}{K\arabic{songnum}}
+\setlength{\songnumwidth}{1cm}
+\setcounter{songnum}{1}
 
 \input{songs-extra/hala-neked-istenunk.tex}
 \input{songs-extra/koszonjuk-neked-urunk.tex}
