--- a/songs-taize.tex
+++ b/songs-taize.tex
@@ -1,5 +1,6 @@
 \renewcommand{\thesongnum}{T\arabic{songnum}}
-\setlength{\songnumwidth}{1.1cm}
+\setlength{\songnumwidth}{1.15cm}
+\setcounter{songnum}{1}
 
 \input{songs-taize/ahol-szeretet.tex}
 \input{songs-taize/aldott-legy-uram.tex}
