--- a/compilations/temp.tex
+++ b/compilations/temp.tex
@@ -13,7 +13,7 @@
 \usepackage[lyric]{songs}
 % \usepackage[slides]{songs}
 
-\title{Gitáros mise\\\textit{(2021. január 02.)}}
+\title{Gitáros mise\\\textit{(2021. február 06.)}}
 % \author{Donkó István}
 \date{}
 
@@ -46,7 +46,9 @@
     \setlength{\oddsidemargin}{-1.625cm}
 
   %   \vspace*{4cm}
-    {\let\newpage\relax\maketitle}
+    % \vspace{-1.5cm}
+    % {\let\newpage\relax\maketitle}
+    % \vspace{-1.5cm}
   % \end{titlepage}
 
   \versesep=12pt plus 3pt minus 5pt
@@ -58,7 +60,7 @@
   % \includeonlysongs{M11,101,56,M11,101,56}
   % \includeonlysongs{80,M10,55,26,M30,M40,85,40,15}
   % \includeonlysongs{46,M10,M20,84,20,56,M30,M40,87,48,97,73,40,92}
-  \includeonlysongs{46,M10,M20,T1,T101,24,M30,M41,48,50,73,92}
+  \includeonlysongs{6,M10,M20,888,T101,999,26,M30,M40,87,88,85,118}
   % \includeonlysongs{T101}
   % \includeonlysongs{999}
   % \includeonlysongs{999,M41}
@@ -68,23 +70,76 @@
     \input{songs.tex}
     \input{songs2.tex}
 
+    \setcounter{songnum}{888}
+    \beginsong{Zsoltár - 2021.02.06.}[sr={Zsolt 146,1-2.3-4.5-6}]
+
+      \beginchorus
+        \[G]Dicsérjétek az Urat, \[C]* aki a megtört szívűeket meggyógyít\[Em]ja.
+      \endchorus
+
+      \beginverse*
+        Dicsérjétek az Urat, mert jó dolog őt áldani, * Istenünknek kedves a dicséret.
+        Jeruzsálemet az Úr újjáépíti, * Izrael szétszórt fiait egybegyűjti.
+      \endverse
+
+      \beginchorus
+        \[G]Dicsérjétek az Urat, \[C]* aki a megtört szívűeket meggyógyít\[Em]ja.
+      \endchorus
+
+      \beginverse*
+        Aki a megtört szívűeket meggyógyítja, * és sebeiket bekötözi.
+        A csillagokat számon tartja, * és nevén szólítja valamennyit.
+      \endverse
+
+      \beginchorus
+        \[G]Dicsérjétek az Urat, \[C]* aki a megtört szívűeket meggyógyít\[Em]ja.
+      \endchorus
+
+      \beginverse*
+        Nagy a mi Urunk, nagy az ő hatalma, * bölcsességének nincs határa.
+        A szelídeket magához emeli, * de porig alázza a bűnösöket.
+      \endverse
+
+      \beginchorus
+        \[G]Dicsérjétek az Urat, \[C]* aki a megtört szívűeket meggyógyít\[Em]ja.
+      \endchorus
+
+      % \ifchorded
+      %   \beginverse*
+      %     {\nolyrics
+      %       \[G] \[A] \[G] \[G] \[F#] \[D] \[E]
+      %     }
+      %   \endverse
+      % \fi
+
+    \endsong
+
+    \setcounter{songnum}{999}
+    \beginsong{Igevers - 2021.02.06.}[sr={Mt 8,17}]
+
+      \beginverse*
+        \[F#]Krisztus gyengeségünket magára vette, \[Hm]* és betegségeinket ő hor\[C#]dozta.
+      \endverse
+
+    \endsong
+
     % \setcounter{songnum}{999}
     % \beginsong{Alleluja}[]
-
+    %
     %   \beginchorus
     %     Alleluja, alleluja…
     %   \endchorus
-
+    %
     %   \beginverse*
     %     Készítsétek elő az Úr útját!
     %     Egyengessétek ösvényét,
     %     És minden ember meglátja az Üdvözítőt, akit elküld az Isten.
     %   \endverse
-
+    %
     %   \beginchorus
     %     Alleluja, alleluja…
     %   \endchorus
-
+    %
     % \endsong
 
     % \setcounter{songnum}{999}
