--- a/compilations/temp.tex
+++ b/compilations/temp.tex
@@ -13,7 +13,7 @@
 \usepackage[lyric]{songs}
 % \usepackage[slides]{songs}
 
-\title{Gitáros mise\\\textit{(2021. február 06.)}}
+\title{Gitáros mise\\\textit{(2021. március 06.)}}
 % \author{Donkó István}
 \date{}
 
@@ -41,15 +41,15 @@
 \begin{document}
   \pagenumbering{arabic}
 
-  % \begin{titlepage}
-  %   \pagenumbering{gobble}
+  \begin{titlepage}
+    \pagenumbering{gobble}
     \setlength{\oddsidemargin}{-1.625cm}
 
-  %   \vspace*{4cm}
+    \vspace*{4cm}
     % \vspace{-1.5cm}
-    % {\let\newpage\relax\maketitle}
+    {\let\newpage\relax\maketitle}
     % \vspace{-1.5cm}
-  % \end{titlepage}
+  \end{titlepage}
 
   \versesep=12pt plus 3pt minus 5pt
 
@@ -60,7 +60,8 @@
   % \includeonlysongs{M11,101,56,M11,101,56}
   % \includeonlysongs{80,M10,55,26,M30,M40,85,40,15}
   % \includeonlysongs{46,M10,M20,84,20,56,M30,M40,87,48,97,73,40,92}
-  \includeonlysongs{6,M10,M20,888,T101,999,26,M30,M40,87,88,85,118}
+  % \includeonlysongs{6,M10,M20,888,T101,999,26,M30,M40,87,88,85,118}
+  \includeonlysongs{35,M10,888,999,56,M30,M42,111,85,40}
   % \includeonlysongs{T101}
   % \includeonlysongs{999}
   % \includeonlysongs{999,M41}
@@ -70,99 +71,7 @@
     \input{songs.tex}
     \input{songs2.tex}
 
-    \setcounter{songnum}{888}
-    \beginsong{Zsoltár - 2021.02.06.}[sr={Zsolt 146,1-2.3-4.5-6}]
-
-      \beginchorus
-        \[G]Dicsérjétek az Urat, \[C]* aki a megtört szívűeket meggyógyít\[Em]ja.
-      \endchorus
-
-      \beginverse*
-        Dicsérjétek az Urat, mert jó dolog őt áldani, * Istenünknek kedves a dicséret.
-        Jeruzsálemet az Úr újjáépíti, * Izrael szétszórt fiait egybegyűjti.
-      \endverse
-
-      \beginchorus
-        \[G]Dicsérjétek az Urat, \[C]* aki a megtört szívűeket meggyógyít\[Em]ja.
-      \endchorus
-
-      \beginverse*
-        Aki a megtört szívűeket meggyógyítja, * és sebeiket bekötözi.
-        A csillagokat számon tartja, * és nevén szólítja valamennyit.
-      \endverse
-
-      \beginchorus
-        \[G]Dicsérjétek az Urat, \[C]* aki a megtört szívűeket meggyógyít\[Em]ja.
-      \endchorus
-
-      \beginverse*
-        Nagy a mi Urunk, nagy az ő hatalma, * bölcsességének nincs határa.
-        A szelídeket magához emeli, * de porig alázza a bűnösöket.
-      \endverse
-
-      \beginchorus
-        \[G]Dicsérjétek az Urat, \[C]* aki a megtört szívűeket meggyógyít\[Em]ja.
-      \endchorus
-
-      % \ifchorded
-      %   \beginverse*
-      %     {\nolyrics
-      %       \[G] \[A] \[G] \[G] \[F#] \[D] \[E]
-      %     }
-      %   \endverse
-      % \fi
-
-    \endsong
-
-    \setcounter{songnum}{999}
-    \beginsong{Igevers - 2021.02.06.}[sr={Mt 8,17}]
-
-      \beginverse*
-        \[F#]Krisztus gyengeségünket magára vette, \[Hm]* és betegségeinket ő hor\[C#]dozta.
-      \endverse
-
-    \endsong
-
-    % \setcounter{songnum}{999}
-    % \beginsong{Alleluja}[]
-    %
-    %   \beginchorus
-    %     Alleluja, alleluja…
-    %   \endchorus
-    %
-    %   \beginverse*
-    %     Készítsétek elő az Úr útját!
-    %     Egyengessétek ösvényét,
-    %     És minden ember meglátja az Üdvözítőt, akit elküld az Isten.
-    %   \endverse
-    %
-    %   \beginchorus
-    %     Alleluja, alleluja…
-    %   \endchorus
-    %
-    % \endsong
-
-    % \setcounter{songnum}{999}
-    % \beginsong{Alleluja}
-    % [
-    %   by={Gocam ??? Varga Attila},
-    %   li={Kék könyv / 230. [-2]}
-    % ]
-
-    %   \beginchorus
-    %     /: \[Hm]Alleluja, \[A]alleluja, \[G]allelu\[F#]ja! :/ \rep{2}
-    %   \endchorus
-
-    %   \beginverse
-    %     \[D]Ó, Urunk, mutassad \[A]meg nekünk, \[Hm]irgalmas szíve\[F#]det,
-    %     \[D]És az üdvösséget \[A]add nekünk, \[Hm]add meg \[G]nékünk, Iste\[F#]nünk!
-    %   \endverse
-
-    %   \beginchorus
-    %     /: \[Hm]Alleluja, \[A]alleluja, \[G]allelu\[F#]ja! :/ \rep{2}
-    %   \endchorus
-
-    % \endsong
+    \input{mass-extra.tex}
 
     % \renewcommand{\thesongnum}{T\arabic{songnum}}
     % \setlength{\songnumwidth}{1.1cm}
@@ -179,6 +88,6 @@
   % \thispagestyle{empty}
   % % To be continued...
   % \vspace*{\fill}
-  % % \vfill
-  % Budaörs, 2020. január 02.
+  % \vfill
+  % Budaörs, 2021. március 06.
 \end{document}
