--- a/mass-extra.tex
+++ b/mass-extra.tex
@@ -50,6 +50,8 @@
 %
 % \endsong
 
+% ------------------------------------------------------------------------------
+
 % \setcounter{songnum}{999}
 % \beginsong{Alleluja}[]
 %
@@ -68,6 +70,8 @@
 %   \endchorus
 %
 % \endsong
+
+% ------------------------------------------------------------------------------
 
 % \setcounter{songnum}{999}
 % \beginsong{Alleluja}
@@ -91,58 +95,122 @@
 
 % \endsong
 
+% ------------------------------------------------------------------------------
+
+% \setcounter{songnum}{888}
+% \beginsong{Zsoltár}
+%
+%   \beginchorus
+%     \[G]Uram, Iste\[Em]nem, * örök \[G]életet adó igé\[D]id van\[Em]nak.
+%   \endchorus
+%
+%   \beginverse
+%     \[G]Tökéletes az Úr t\[Em]örvénye, * \[G]megújítja \[D]a lelk\[Em]et.
+%     Az Úr tanúságában bízhatunk, * bölcsességet ad a kicsinyeknek.
+%   \endverse
+%
+%   \beginchorus
+%     \[G]Uram, Iste\[Em]nem, * örök \[G]életet adó igé\[D]id van\[Em]nak.
+%   \endchorus
+%
+%   \beginverse
+%     Az ^Úr végzése ^igaz, * ^megvidámítja ^a szív^et.
+%     Az Úr parancsa világos, * fényt gyújt a szemnek.
+%   \endverse
+%
+%   \beginchorus
+%     \[G]Uram, Iste\[Em]nem, * örök \[G]életet adó igé\[D]id van\[Em]nak.
+%   \endchorus
+%
+%   \beginverse
+%     Az ^Úr félelme ^tiszta: * ^örökké ^megmar^ad.
+%     Az Úr ítéletei igazak, * és mind egyaránt jogosak.
+%   \endverse
+%
+%   \beginchorus
+%     \[G]Uram, Iste\[Em]nem, * örök \[G]életet adó igé\[D]id van\[Em]nak.
+%   \endchorus
+%
+%   \beginverse
+%     ^Értékesebb az ^aranynál, * ^és a legdrágább drá^gakőn^él.
+%     Édesebb a méznél, * a csorduló lépes méznél.
+%   \endverse
+%
+%   \beginchorus
+%     \[G]Uram, Iste\[Em]nem, * örök \[G]életet adó igé\[D]id van\[Em]nak.
+%   \endchorus
+%
+% \endsong
+%
+% \setcounter{songnum}{999}
+% \beginsong{Igevers}
+%
+%   \beginverse
+%     \[Dm]Úgy szerette Isten a vi\[F]lágot, hogy \[A#]egyszülöttét adta \[C]érte
+%     Hogy \[C]mindaz aki hisz \[F]Őbenne, \[F]el ne vesszen, hanem \[Gm]örökké \[Dm]éljen.
+%   \endverse
+%
+% \endsong
+
+% ------------------------------------------------------------------------------
 
 \setcounter{songnum}{888}
-\beginsong{Zsoltár}
+\beginsong{Zsoltár - Irgalmas Istenünk}
+
+  \versesep=12pt plus 3pt minus 8pt
 
   \beginchorus
-    \[G]Uram, Iste\[Em]nem, * örök \[G]életet adó igé\[D]id van\[Em]nak.
+    \[Dm] Irgalmas \[A]Istenünk \[Dm]jósá\[C]gát \[F]mindö\[C]rökké \[Dm]é\[A]nek\[Dm]lem!
   \endchorus
 
   \beginverse
-    \[G]Tökéletes az Úr t\[Em]örvénye, * \[G]megújítja \[D]a lelk\[Em]et.
-    Az Úr tanúságában bízhatunk, * bölcsességet ad a kicsinyeknek.
+    Mondja Izrael háza, hogy jó az Isten, * mivel irgalma örökké megmarad.
+    Mondja Áron papi háza is, * mivel irgalma örökké megmarad.
+    Mondják, akik félik az Urat, * mivel irgalma örökké megmarad.
   \endverse
 
   \beginchorus
-    \[G]Uram, Iste\[Em]nem, * örök \[G]életet adó igé\[D]id van\[Em]nak.
+    \[Dm] Irgalmas \[A]Istenünk \[Dm]jósá\[C]gát \[F]mindö\[C]rökké \[Dm]é\[A]nek\[Dm]lem!
   \endchorus
 
   \beginverse
-    Az ^Úr végzése ^igaz, * ^megvidámítja ^a szív^et.
-    Az Úr parancsa világos, * fényt gyújt a szemnek.
+    Az Úr jobb keze erősnek bizonyult, * az Úrnak jobbja fölemelt engem.
+    Nem halok meg, hanem élek, * és hirdetem az Úr nagy tetteit.
+    Megfenyített az Úr és megpróbált, * de nem adott halálra engem.
   \endverse
 
   \beginchorus
-    \[G]Uram, Iste\[Em]nem, * örök \[G]életet adó igé\[D]id van\[Em]nak.
+    \[Dm] Irgalmas \[A]Istenünk \[Dm]jósá\[C]gát \[F]mindö\[C]rökké \[Dm]é\[A]nek\[Dm]lem!
   \endchorus
 
   \beginverse
-    Az ^Úr félelme ^tiszta: * ^örökké ^megmar^ad.
-    Az Úr ítéletei igazak, * és mind egyaránt jogosak.
+    A kő, amelyet az építők félredobtak, * íme, az vált szegletkővé.
+    Mindezt az Úr vitte végbe, * csodálatra méltó a mi szemünkben.
+    Ezt a napot az Úristen adta, * örvendjünk és vigadjunk rajta.
   \endverse
 
   \beginchorus
-    \[G]Uram, Iste\[Em]nem, * örök \[G]életet adó igé\[D]id van\[Em]nak.
-  \endchorus
-
-  \beginverse
-    ^Értékesebb az ^aranynál, * ^és a legdrágább drá^gakőn^él.
-    Édesebb a méznél, * a csorduló lépes méznél.
-  \endverse
-
-  \beginchorus
-    \[G]Uram, Iste\[Em]nem, * örök \[G]életet adó igé\[D]id van\[Em]nak.
+    \[Dm] Irgalmas \[A]Istenünk \[Dm]jósá\[C]gát \[F]mindö\[C]rökké \[Dm]é\[A]nek\[Dm]lem!
   \endchorus
 
 \endsong
 
 \setcounter{songnum}{999}
-\beginsong{Igevers}
+\beginsong{Igevers - Alleluja}
+  \transpose{3}
+  \prefersharps
+  \beginchorus
+    Alle\[Hm]luja, alle\[D]luja, alle\[G]l\[A]{\_{u}}\[D]ja. Alle\[Hm]luja, alle\[D]luja, alle\[G]l\[Em F#]{\_{u}}\[Hm]ja!
+  \endchorus
 
-  \beginverse
-    \[Dm]Úgy szerette Isten a vi\[F]lágot, hogy \[A#]egyszülöttét adta \[C]érte
-    Hogy \[C]mindaz aki hisz \[F]Őbenne, \[F]el ne vesszen, hanem \[Gm]örökké \[Dm]éljen.
+  \beginverse*
+    % \hspace{-1cm}Most már hiszel, Tamás, mert láttál engem. Boldogok, akik nem láttak, és mégis hittek.
+    Most már hiszel, Tamás, mert láttál engem.
+    Boldogok, akik nem láttak, és mégis hittek.
   \endverse
+
+  \beginchorus
+    Alle\[Hm]luja, alle\[D]luja, alle\[G]l\[A]{\_{u}}\[D]ja.  Alle\[Hm]luja, alle\[D]luja, alle\[G]l\[Em F#]{\_{u}}\[Hm]ja!
+  \endchorus
 
 \endsong
