--- a/compilations/temp.tex
+++ b/compilations/temp.tex
@@ -7,27 +7,28 @@
 \usepackage{graphicx}
 \graphicspath{ {images/} }
 
+\usepackage{multicol}
 \usepackage[bookmarks]{hyperref}
 
-% \usepackage[chorded]{songs}
-\usepackage[lyric]{songs}
+\usepackage[chorded]{songs}
+% \usepackage[lyric]{songs}
 % \usepackage[slides]{songs}
 
-\title{Gitáros mise\\\textit{(2021. április 10.)}}
+\title{Gitáros mise\\\textit{(2021. május 1.)}}
 % \author{Donkó István}
 \date{}
 
-\setlength{\topmargin}{-2cm}
+\setlength{\topmargin}{-1.5cm}
 
 \setlength{\headheight}{0cm}
 \setlength{\headsep}{0cm}
 \setlength{\footskip}{0.85cm}
 
-\setlength{\oddsidemargin}{-2cm}
-\setlength{\evensidemargin}{-2cm}
+\setlength{\oddsidemargin}{-1.8cm}
+\setlength{\evensidemargin}{-1.8cm}
 
-\setlength{\textwidth}{13.7cm}
-\setlength{\textheight}{19.25cm}
+\setlength{\textwidth}{13.25cm}
+\setlength{\textheight}{18.25cm}
 
 \setlength{\songnumwidth}{1.02cm}
 \setlength{\versenumwidth}{0.5cm}
@@ -60,17 +61,19 @@
   \fi
 
   \begin{center}
+    \vspace*{1.5cm}
     {\huge Gitáros mise} \\
-    \vspace{0.1cm}
-    {\Large \textit{(2021. április 10.)}}
+    \vspace*{0.1cm}
+    {\Large \textit{(2021. május 1.)}}
+    \vspace{2cm}
   \end{center}
-  \vspace{-0.25cm}
+  % \vspace{-0.25cm}
 
   % \includeonlysongs{M11,101,56,M11,101,56}
   % \includeonlysongs{80,M10,55,26,M30,M40,85,40,15}
   % \includeonlysongs{46,M10,M20,84,20,56,M30,M40,87,48,97,73,40,92}
   % \includeonlysongs{6,M10,M20,888,T101,999,26,M30,M40,87,88,85,118}
-  \includeonlysongs{58,M19,M20,888,999,24,M30,M40,10,119,29}
+  \includeonlysongs{46,M10,M20,T6,T101,56,M30,M40,65,87,90,116}
   % \includeonlysongs{T101}
   % \includeonlysongs{999}
   % \includeonlysongs{999,M41}
@@ -98,5 +101,5 @@
   % % To be continued...
   % \vspace*{\fill}
   % \vfill
-  % Budaörs, 2021. április 10.
+  % Budaörs, 2021. május 1.
 \end{document}
